--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,10 @@
   },
   "require": {
     "php": ">=5.5",
-    "cheprasov/php-memcached-lock": "1.0.0"
+    "cheprasov/php-memcached-lock": "1.0.*"
   },
   "require-dev": {
-    "phpunit/phpunit": "5.1.*",
-    "cheprasov/php-parallel": "1.0.0"
+    "phpunit/phpunit": "4.8.*",
+    "cheprasov/php-parallel": "1.0.*"
   }
 }
